@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.10
+Release: 0.12
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -494,6 +494,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Fri Jan 28 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-0.12
+- python: force dbMatch() h# key to be 32 bit integer (#146477).
+
 * Tue Jan 25 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-0.10
 - more macosx fiddles.
 - move global /var/lock/rpm/transaction to dbpath.
